--- a/package.json
+++ b/package.json
@@ -1,25 +1,50 @@
 {
   "name": "react-internationalization",
   "version": "0.1.0",
+  "allLocales": [
+    "en",
+    "fr"
+  ],
   "private": true,
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-intl": "^2.7.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "i18n": "node ./translationRunner.js"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ],
+    "plugins": [
+      [
+        "react-intl",
+        {
+          "messagesDir": "src/translations/extractedMessages/",
+          "enforceDescriptions": false
+        }
+      ]
+    ]
   },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-intl-translations-manager": "^5.0.3"
+  }
 }
